--- a/build.gradle
+++ b/build.gradle
@@ -746,6 +746,95 @@ task gatkTabComplete(type: Javadoc, dependsOn: classes) {
     options.addStringOption("caller-post-arg-max-occurs", "1 1 1 1 1 1 1 1 1 1")
 }
 
+def getWLDInputJSONTestFileNameFromWDLName(File wdlName) {
+    String fileWithoutExt = wdlName.name.take(wdlName.name.lastIndexOf('.'))
+    return new File (wdlName.getParentFile(), fileWithoutExt + "Inputs.json").getAbsolutePath()
+}
+
+// Generate GATK Tool WDL
+task gatkWDLGen(type: Javadoc, dependsOn: classes) {
+    final File gatkWDLDir = new File("$docBuildDir/wdlGen")
+    outputs.dir(gatkWDLDir)
+    doFirst {
+        // make sure the output folder exists or we can create it
+        if (!gatkWDLDir.exists() && !gatkWDLDir.mkdirs()) {
+            throw new GradleException(String.format("Failure creating folder (%s) for GATK DL output in task (%s)",
+                    gatkWDLDir.getAbsolutePath(),
+                    it.name));
+        }
+        copy {
+            from('src/main/resources/org/broadinstitute/hellbender/utils/wdlTemplates/common.html')
+            into gatkWDLDir
+        }
+    }
+    source = sourceSets.main.allJava + files(configurations.externalSourceConfiguration.collect { zipTree(it) })
+    include '**/*.java'
+
+    // The gatkWDLGen process instantiates any documented feature classes, so to run it we need the entire
+    // runtime classpath, as well as jdk javadoc files such as tools.jar, where com.sun.javadoc lives.
+    classpath = sourceSets.main.runtimeClasspath + javadocJDKFiles
+    options.docletpath = classpath.asType(List)
+    options.doclet = "org.broadinstitute.hellbender.utils.help.GATKWDLDoclet"
+
+    outputs.dir(gatkWDLDir)
+    options.destinationDirectory(gatkWDLDir)
+
+    options.addStringOption("settings-dir", "src/main/resources/org/broadinstitute/hellbender/utils/wdlTemplates");
+    options.addStringOption("output-file-extension", "wdl")
+    options.addStringOption("index-file-extension", "html")
+
+    options.addStringOption("absolute-version", getVersion())
+    options.addStringOption("build-timestamp", ZonedDateTime.now().format(DateTimeFormatter.RFC_1123_DATE_TIME))
+
+    // the wdl doclet will populate the test JSON input files with the name of a dummy
+    // file in this location, in order to satisfy cromwell's attempts to localize inputs and outputs
+    options.addStringOption("build-dir", System.getenv("TRAVIS_BUILD_DIR") ?: ".")
+}
+
+task gatkWDLGenValidation(dependsOn: [gatkWDLGen, shadowJar]) {
+    def execWDLValidation = { validateWDL ->
+        println "Executing: $validateWDL"
+        try {
+            def retCode = validateWDL.execute().waitFor()
+            if (retCode.intValue() != 0) {
+                throw new GradleException("Execution of \"$validateWDL\" failed with exit code: $retCode.")
+            }
+            return retCode
+        } catch (IOException e) {
+            throw new GradleException("An IOException occurred while attempting to execute the command $validateWDL.")
+        }
+    }
+
+    doLast {
+        // first, run the womtool validator
+        final File wdlGenFolder = new File("$docBuildDir/wdlGen")
+        def wdlFiles = fileTree(dir: wdlGenFolder).filter {
+            f -> !f.getAbsolutePath().endsWith(".html") && !f.getAbsolutePath().endsWith(".json")
+        }
+        wdlFiles.any() { wdlFile ->
+            final womtoolLocation = System.getenv('WOMTOOL_JAR')
+            final validateWDLCommand = "java -jar $womtoolLocation validate $wdlFile"
+            execWDLValidation(validateWDLCommand)
+        }
+
+        // now execute the *AllArgs test wdls using cromwell
+        wdlFiles = fileTree(dir: wdlGenFolder).filter {
+            f -> f.getAbsolutePath().endsWith("AllArgsTest.wdl")
+        }
+        wdlFiles.any() { wdlFile ->
+            final cromwellLocation = System.getenv('CROMWELL_JAR')
+            final testInputJSON = getWLDInputJSONTestFileNameFromWDLName(wdlFile)
+            final runWDLCommand = "java -jar $cromwellLocation run --inputs $testInputJSON $wdlFile"
+            // the test JSON input file is populated by the WDL gen process with this dummy file name
+            // to satisfy cromwell's attempt to de/localize input files
+            def buildDir = System.getenv("TRAVIS_BUILD_DIR") ?: "."
+            final createDummyTestInputFile = "touch $buildDir/dummyWDLTestFile"
+            execWDLValidation(createDummyTestInputFile)
+            execWDLValidation(runWDLCommand)
+        }
+    }
+
+}
 
 
 /**
