report errors to github comment

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,4 @@
 language: java
-sudo: required
 dist: trusty
 group: travis_lts
 git:
@@ -205,10 +204,6 @@ after_success:
     git tag master;
     ./gradlew uploadArchives; 
   fi;
-
-after_failure:
-- dmesg | tail -100
-after_script:
 - if [[ $TRAVIS_SECURE_ENV_VARS == true && $TRAVIS_EVENT_TYPE != cron ]]; then
     if [[ ${TESTS_REQUIRE_GCLOUD} != "true" ]]; then
       scripts/travis/install_and_authenticate_to_gcloud.sh;
@@ -216,5 +211,16 @@ after_script:
     $GCLOUD_HOME/gsutil -m cp -z html -z js -z xml -z css -r build/reports/tests gs:/$HELLBENDER_TEST_LOGS$REPORT_PATH/;
     echo "See the test report at https://storage.googleapis.com$HELLBENDER_TEST_LOGS$REPORT_PATH/tests/test/index.html";
   fi;
-
-
+after_failure:
+- dmesg | tail -100
+- if [[ $TRAVIS_SECURE_ENV_VARS == true && $TRAVIS_EVENT_TYPE != cron ]]; then
+    if [[ ${TESTS_REQUIRE_GCLOUD} != "true" ]]; then
+      scripts/travis/install_and_authenticate_to_gcloud.sh;
+    fi;
+    $GCLOUD_HOME/gsutil -m cp -z html -z js -z xml -z css -r build/reports/tests gs:/$HELLBENDER_TEST_LOGS$REPORT_PATH/;
+    echo "See the test report at https://storage.googleapis.com$HELLBENDER_TEST_LOGS$REPORT_PATH/tests/test/index.html";
+    if [[ ${TRAVIS_PULL_REQUEST} != false && -d build/reports/tests ]]; then
+      pip install PyGithub;
+      python resources_for_ci/Reporter.py https://storage.googleapis.com$HELLBENDER_TEST_LOGS$REPORT_PATH/tests/test/index.html;
+    fi
+  fi;
