--- a/.travis.yml
+++ b/.travis.yml
@@ -220,7 +220,8 @@ after_failure:
     $GCLOUD_HOME/gsutil -m cp -z html -z js -z xml -z css -r build/reports/tests gs:/$HELLBENDER_TEST_LOGS$REPORT_PATH/;
     echo "See the test report at https://storage.googleapis.com$HELLBENDER_TEST_LOGS$REPORT_PATH/tests/test/index.html";
     if [[ ${TRAVIS_PULL_REQUEST} != false && -d build/reports/tests ]]; then
-      pip install PyGithub;
-      python resources_for_ci/Reporter.py https://storage.googleapis.com$HELLBENDER_TEST_LOGS$REPORT_PATH/tests/test/index.html;
+      sudo pip install --upgrade pip
+      sudo pip install PyGithub;
+      python resources_for_CI/Reporter.py https://storage.googleapis.com$HELLBENDER_TEST_LOGS$REPORT_PATH/tests/test/index.html;
     fi
   fi;
