--- a/build.gradle
+++ b/build.gradle
@@ -57,7 +57,7 @@ repositories {
     mavenLocal()
 }
 
-final htsjdkVersion = System.getProperty('htsjdk.version','2.20.3-9-g03e9a32-SNAPSHOT')
+final htsjdkVersion = System.getProperty('htsjdk.version','2.21.0')
 final picardVersion = System.getProperty('picard.version','2.21.1')
 final barclayVersion = System.getProperty('barclay.version','2.1.0')
 final sparkVersion = System.getProperty('spark.version', '2.4.3')
