--- a/.travis.yml
+++ b/.travis.yml
@@ -204,23 +204,19 @@ after_success:
     git tag master;
     ./gradlew uploadArchives; 
   fi;
-- if [[ $TRAVIS_SECURE_ENV_VARS == true && $TRAVIS_EVENT_TYPE != cron ]]; then
-    if [[ ${TESTS_REQUIRE_GCLOUD} != "true" ]]; then
-      scripts/travis/install_and_authenticate_to_gcloud.sh;
-    fi;
-    $GCLOUD_HOME/gsutil -m cp -z html -z js -z xml -z css -r build/reports/tests gs:/$HELLBENDER_TEST_LOGS$REPORT_PATH/;
-    echo "See the test report at https://storage.googleapis.com$HELLBENDER_TEST_LOGS$REPORT_PATH/tests/test/index.html";
-  fi;
 after_failure:
 - dmesg | tail -100
+- export FAILED=true
+after_script:
 - if [[ $TRAVIS_SECURE_ENV_VARS == true && $TRAVIS_EVENT_TYPE != cron ]]; then
     if [[ ${TESTS_REQUIRE_GCLOUD} != "true" ]]; then
       scripts/travis/install_and_authenticate_to_gcloud.sh;
     fi;
     $GCLOUD_HOME/gsutil -m cp -z html -z js -z xml -z css -r build/reports/tests gs:/$HELLBENDER_TEST_LOGS$REPORT_PATH/;
     echo "See the test report at https://storage.googleapis.com$HELLBENDER_TEST_LOGS$REPORT_PATH/tests/test/index.html";
-    if [[ ${TRAVIS_PULL_REQUEST} != false && -d build/reports/tests ]]; then
+    if [[ ${FAILED} == true && ${TRAVIS_PULL_REQUEST} != false && -d build/reports/tests ]]; then
       pip install --user PyGithub;
-      python resources_for_CI/Reporter.py https://storage.googleapis.com$HELLBENDER_TEST_LOGS$REPORT_PATH/tests/test/index.html;
+      python scripts/travis/Reporter.py https://storage.googleapis.com$HELLBENDER_TEST_LOGS$REPORT_PATH/tests/test/index.html;
     fi
   fi;
+
