--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,4 @@
 language: java
-sudo: required
 dist: trusty
 group: travis_lts
 git:
@@ -205,9 +204,9 @@ after_success:
     git tag master;
     ./gradlew uploadArchives; 
   fi;
-
 after_failure:
 - dmesg | tail -100
+- export FAILED=true
 after_script:
 - if [[ $TRAVIS_SECURE_ENV_VARS == true && $TRAVIS_EVENT_TYPE != cron ]]; then
     if [[ ${TESTS_REQUIRE_GCLOUD} != "true" ]]; then
@@ -215,6 +214,9 @@ after_script:
     fi;
     $GCLOUD_HOME/gsutil -m cp -z html -z js -z xml -z css -r build/reports/tests gs:/$HELLBENDER_TEST_LOGS$REPORT_PATH/;
     echo "See the test report at https://storage.googleapis.com$HELLBENDER_TEST_LOGS$REPORT_PATH/tests/test/index.html";
+    if [[ ${FAILED} == true && ${TRAVIS_PULL_REQUEST} != false && -d build/reports/tests ]]; then
+      pip install --user PyGithub;
+      python scripts/travis/Reporter.py https://storage.googleapis.com$HELLBENDER_TEST_LOGS$REPORT_PATH/tests/test/index.html;
+    fi
   fi;
-
 
