--- a/.travis.yml
+++ b/.travis.yml
@@ -73,6 +73,12 @@ before_install:
       travis_terminate 0;
     fi;
   fi;
+ # Install java 8
+- if [[ TRAVIS_JDK_VERSION = "openjdk8" ]]; then
+  sudo apt-get update;
+  sudo apt install openjdk-8-jdk;
+  fi
+- java -version
 - REPORT_PATH=${TRAVIS_BRANCH}_${TRAVIS_JOB_NUMBER};
 - if [[ $TRAVIS_SECURE_ENV_VARS == true && $TRAVIS_EVENT_TYPE != cron ]]; then
     echo "Test report will be written to  https://storage.googleapis.com$HELLBENDER_TEST_LOGS$REPORT_PATH/tests/test/index.html";
