--- a/.travis.yml
+++ b/.travis.yml
@@ -75,7 +75,7 @@ before_install:
  # Install java 8
 - if [[ $JAVA_VERSION = "openjdk-8-jdk" ]]; then
     sudo apt-get update;
-    sudo apt install openjdk-8-jdk;
+    sudo apt install openjdk-8-jdk java-common;
     sudo update-java-alternatives -s java-1.8.0-openjdk-amd64;
   fi
 - java -version
