--- a/.travis.yml
+++ b/.travis.yml
@@ -78,6 +78,8 @@ before_install:
     sudo apt install openjdk-8-jdk java-common;
     sudo update-java-alternatives -l;
     sudo update-java-alternatives -s java-1.8.0-openjdk-amd64;
+    export JAVA_HOME=/usr/lib/jvm/java-1.8.0-openjdk-amd64/
+    export PATH=$PATH:$JAVA_HOME
   fi
 - java -version
 - REPORT_PATH=${TRAVIS_BRANCH}_${TRAVIS_JOB_NUMBER};
