--- a/.travis.yml
+++ b/.travis.yml
@@ -78,6 +78,8 @@ before_install:
     sudo apt install openjdk-8-jdk java-common;
     sudo update-java-alternatives -l;
     sudo update-java-alternatives -s java-1.8.0-openjdk-amd64;
+    sudo update-alternatives --set java /usr/lib/jvm/java-8-openjdk-amd64/jre/bin/java;
+    sudo update-alternatives --set javac /usr/lib/jvm/java-8-openjdk-amd64/bin/javac;
     export JAVA_HOME=/usr/lib/jvm/java-1.8.0-openjdk-amd64/;
     export PATH=$PATH:$JAVA_HOME;
   fi
