--- a/.travis.yml
+++ b/.travis.yml
@@ -74,14 +74,13 @@ before_install:
   fi;
  # Install java 8
 - if [[ $JAVA_VERSION = "openjdk-8-jdk" ]]; then
+    echo "installing java 8"
     sudo apt-get update;
     sudo apt install openjdk-8-jdk java-common;
-    sudo update-java-alternatives -l;
-    sudo update-java-alternatives -s java-1.8.0-openjdk-amd64;
     sudo update-alternatives --set java /usr/lib/jvm/java-8-openjdk-amd64/jre/bin/java;
     sudo update-alternatives --set javac /usr/lib/jvm/java-8-openjdk-amd64/bin/javac;
     export JAVA_HOME=/usr/lib/jvm/java-1.8.0-openjdk-amd64/;
-    export PATH=$PATH:$JAVA_HOME;
+    export PATH=$JAVA_HOME:$PATH;
   fi
 - java -version
 - REPORT_PATH=${TRAVIS_BRANCH}_${TRAVIS_JOB_NUMBER};
