--- a/.travis.yml
+++ b/.travis.yml
@@ -83,7 +83,7 @@ before_install:
     sudo update-alternatives --set java /usr/lib/jvm/java-8-openjdk-amd64/jre/bin/java;
     sudo update-alternatives --set javac /usr/lib/jvm/java-8-openjdk-amd64/bin/javac;
     export JAVA_HOME=/usr/lib/jvm/java-1.8.0-openjdk-amd64/;
-    export PATH=$JAVA_HOME:$PATH;
+    export PATH=$JAVA_HOME/bin:$PATH;
   fi
 - java -version
 - which java
