Terra exercise ecg (#128)
Use ml4cvd method to read exercise ecg data.

Also
* Move terra code into ml4cvd package and pull the full ml4cvd package into the Terra Docker image.
* Centralize data location config to allow for more complexity regarding runtime environments.

--- a/docker/terra_image/Dockerfile
+++ b/docker/terra_image/Dockerfile
@@ -12,6 +12,20 @@ ENV PATH $PATH:$HOME/.local/bin
 # Temporarily make pip install to the system directory.
 ENV PIP_USER=false
 
+# Add minimal ml4cvd dependencies.
+RUN apt-get install libxt-dev -y \
+  # TODO(deflaux) update and use https://github.com/broadinstitute/ml/blob/master/docker/vm_boot_images/config/tensorflow-requirements.txt
+  # instead, after the Tensorflow 2.0 pull request is merged.
+  && pip3 install \
+  apache-beam[gcp]==2.12.0 \
+  google-cloud-storage==1.25.0 \
+  h5py==2.9.0 \
+  imageio==2.6.1 \
+  keras==2.2.5 \
+  nibabel==2.5.0 \
+  seaborn==0.9.0 \
+  vtk==8.1.2
+
 # Add visualization libraries not installed by default on Terra and upgrade
 # to newer versions for other libraries that are installed by default.
 RUN pip3 install --upgrade \
@@ -47,6 +61,10 @@ RUN pip3 install --upgrade \
   && jupyter nbextension install --py vega \
   && jupyter nbextension enable --py vega
 
+# TODO(deflaux): this also needs libgl1-mesa-glx and/or python3-tk to fix error
+# "ModuleNotFoundError: No module named 'vtkOpenGLKitPython'"
+# but neither of those have installation candidate for this base image.
+
 # Terra notebook Content Security Policy prohibits importing this HTML from a
 # remote location, so we download a local copy instead. The instructions in
 # https://github.com/PAIR-code/facets#setup do not apply to Terra due to the way
@@ -61,9 +79,11 @@ RUN cd $JUPYTER_HOME/custom \
 # context of a notebook.
 ENV PIP_USER=true
 
-# Install custom private python package from Puneet Batra's team.
+# Install custom private python package from Puneet Batra's team. Enable easy
+# local edits by placing it in the home directory with write access for
+# jupyter-user.
 USER $USER
-RUN mkdir -p $HOME/ml4cvd/ecg_demo
-COPY --chown=jupyter-user:users ecg_demo $HOME/ml4cvd/ecg_demo
-ENV PYTHONPATH $PYTHONPATH:$HOME/ml4cvd
+RUN mkdir -p $HOME/ml4cvd_pkg
+COPY --chown=jupyter-user:users ml4cvd $HOME/ml4cvd_pkg/ml4cvd
+ENV PYTHONPATH $PYTHONPATH:$HOME/ml4cvd_pkg
 
