Tensor Maps on Partners data (#171)
survival loss updates and tf.sh generalized for cloud or on-prem

--- a/docker/vm_boot_images/Dockerfile
+++ b/docker/vm_boot_images/Dockerfile
@@ -30,5 +30,7 @@ RUN ./ubuntu.sh
 # RUN ./fastai.sh
 
 RUN apt-get install python3-tk libgl1-mesa-glx libxt-dev -y
+
 # Requirements for the tensorflow project
+RUN pip3 install --upgrade pip
 RUN pip3 install -r tensorflow-requirements.txt
