Moved miniconda install to Docker base, moved R dependencies to conda environment, cleaned up R/python dependencies in conda environment, and updated base/Travis Ubuntu to 18.04.

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,19 +1,18 @@
 language: java
-dist: trusty
+dist: bionic
 group: travis_lts
 git:
   depth: 9999999
   lfs_skip_smudge: true
 jdk:
-- openjdk8
+  - openjdk8
 env:
   matrix:
   - SCALA_VERSION=2.11 TEST_TYPE=cloud UPLOAD=true TESTS_REQUIRE_GCLOUD=true
   - SCALA_VERSION=2.11 TEST_TYPE=integration TEST_DOCKER=true TEST_VERBOSITY=minimal
   - SCALA_VERSION=2.11 TEST_TYPE=unit TEST_DOCKER=true TEST_VERBOSITY=minimal
   - SCALA_VERSION=2.11 TEST_TYPE=variantcalling TEST_DOCKER=true TEST_VERBOSITY=minimal
-  - SCALA_VERSION=2.11 TEST_TYPE=python TEST_DOCKER=true TEST_VERBOSITY=minimal
-  - SCALA_VERSION=2.11 TEST_TYPE=R TEST_DOCKER=true TEST_VERBOSITY=minimal
+  - SCALA_VERSION=2.11 TEST_TYPE=conda TEST_DOCKER=true TEST_VERBOSITY=minimal
   - SCALA_VERSION=2.11 RUN_CNV_GERMLINE_COHORT_WDL=true TESTS_REQUIRE_GCLOUD=true
   - SCALA_VERSION=2.11 RUN_CNV_GERMLINE_CASE_WDL=true TESTS_REQUIRE_GCLOUD=true
   - SCALA_VERSION=2.11 RUN_CNV_SOMATIC_WDL=true TESTS_REQUIRE_GCLOUD=true
@@ -46,13 +45,14 @@ env:
 matrix:
   fast_finish: true
   include:
-     - jdk: oraclejdk8
-       env: SCALA_VERSION=2.11 TEST_TYPE=integration TEST_VERBOSITY=minimal TEST_REQUIRE_GCLOUD=true
      - jdk: openjdk11
+       language: java
        env: SCALA_VERSION=2.12 TEST_TYPE=integration TEST_VERBOSITY=minimal
      - jdk: openjdk11
+       language: java
        env: SCALA_VERSION=2.12 TEST_TYPE=unit TEST_VERBOSITY=minimal
      - jdk: openjdk11
+       language: java
        env: SCALA_VERSION=2.12 TEST_TYPE=cloud TESTS_REQUIRE_GCLOUD=true TEST_VERBOSITY=minimal
 before_cache:
   - rm -f  $HOME/.gradle/caches/modules-2/modules-2.lock
