--- a/build.gradle
+++ b/build.gradle
@@ -355,6 +355,8 @@ dependencies {
     compile 'org.broadinstitute:gatk-bwamem-jni:1.0.4'
     compile 'org.broadinstitute:gatk-fermilite-jni:1.2.0'
 
+    compile 'org.broadinstitute:http-nio:0.1.0-rc1'
+
     // Required for COSMIC Funcotator data source:
     compile 'org.xerial:sqlite-jdbc:3.20.1'
     
