--- a/docker/vm_boot_images/Dockerfile
+++ b/docker/vm_boot_images/Dockerfile
@@ -33,4 +33,5 @@ RUN apt-get install python3-tk libgl1-mesa-glx libxt-dev -y
 
 # Requirements for the tensorflow project
 RUN pip3 install --upgrade pip
+RUN pip3 install -r pre_requirements.txt
 RUN pip3 install -r tensorflow-requirements.txt
