--- a/build.gradle
+++ b/build.gradle
@@ -68,7 +68,7 @@ final sparkVersion = System.getProperty('spark.version', '2.4.3')
 final scalaVersion = System.getProperty('scala.version', '2.11')
 final hadoopVersion = System.getProperty('hadoop.version', '2.8.2')
 final disqVersion = System.getProperty('disq.version','0.3.5')
-final genomicsdbVersion = System.getProperty('genomicsdb.version','1.2.1')
+final genomicsdbVersion = System.getProperty('genomicsdb.version','1.2.3-SNAPSHOT')
 final testNGVersion = '7.0.0'
 // Using the shaded version to avoid conflicts between its protobuf dependency
 // and that of Hadoop/Spark (either the one we reference explicitly, or the one
