--- a/build.gradle
+++ b/build.gradle
@@ -68,7 +68,7 @@ final sparkVersion = System.getProperty('spark.version', '2.4.5')
 final scalaVersion = System.getProperty('scala.version', '2.11')
 final hadoopVersion = System.getProperty('hadoop.version', '2.8.2')
 final disqVersion = System.getProperty('disq.version','0.3.6')
-final genomicsdbVersion = System.getProperty('genomicsdb.version','1.2.1')
+final genomicsdbVersion = System.getProperty('genomicsdb.version','1.3.0')
 final testNGVersion = '7.0.0'
 // Using the shaded version to avoid conflicts between its protobuf dependency
 // and that of Hadoop/Spark (either the one we reference explicitly, or the one
@@ -255,7 +255,8 @@ dependencies {
     compile 'com.github.broadinstitute:picard:' + picardVersion
     externalSourceConfiguration 'com.github.broadinstitute:picard:' + picardVersion + ':sources'
     compile ('org.genomicsdb:genomicsdb:' + genomicsdbVersion)  {
-        exclude module: 'log4j'
+        exclude module: 'log4j-api'
+        exclude module: 'log4j-core'
         exclude module: 'spark-core_2.11'
         exclude module: 'spark-sql_2.11'
         exclude module: 'htsjdk'
