Enable direct s3a:// file accesses
Currently, we need to copy files on S3 to local storage before using
them. This patch enables gatk local and spark modes to access s3a://
files directly to reduce copy overhead and local disk usages.

s3a file accesses require additional configuration of core-site.xml
located in CLASSPATH as well as other hadoop applications. Spark
already has hadoop dependencies but local modes need to add hadoop
jars in the classpath.

Example core-site.xml:

<configuration>
<property>
<name>fs.s3a.access.key</name>
<value>{Your AWS_ACCESS_KEY_ID}</value>
</property>
<property>
<name>fs.s3a.secret.key</name>
<value>{Your AWS_SECRET_ACCESS_KEY}</value>
</property>
</configuration>

--- a/build.gradle
+++ b/build.gradle
@@ -324,6 +324,7 @@ dependencies {
     compile('org.disq-bio:disq:' + disqVersion)
     compile('org.apache.hadoop:hadoop-client:' + hadoopVersion) // should be a 'provided' dependency
     compile('com.github.jsr203hadoop:jsr203hadoop:1.0.3')
+    compile('net.fnothaft:jsr203-s3a:0.0.1')
 
     compile('de.javakaffee:kryo-serializers:0.41') {
         exclude module: 'kryo' // use Spark's version
