--- a/.travis.yml
+++ b/.travis.yml
@@ -158,14 +158,8 @@ script:
     fi;
     sudo docker images;
     echo ${TEST_TYPE};
-  # Because the docker build for GATK doesn't include the test code or the src files we have to manually collect them into a location to be mounted in for performing tests
-    ./gradlew clean shadowTestClassJar shadowTestJar;
-    mkdir ./testJars;
-    echo $( find ./build/libs/ -name "gatk*test.jar");
-    cp -r $( find ./build/libs/ -name "gatk*test.jar" ) ./testJars;
-    cp -r $( find ./build/libs/ -name "gatk*testDependencies.jar" ) ./testJars;
-    mkdir -p build/reports/;
-    chmod -R a+w build/reports/;
+    sudo mkdir -p build/reports/;
+    sudo chmod -R a+w build/reports/;
     cp scripts/docker/dockertest.gradle .;
     sudo docker run -v $(pwd):/gatkCloneMountPoint:cached -v $(pwd)/testJars:/jars:cached --rm -e "scala.version=${SCALA_VERSION}" -e "TEST_VERBOSITY=minimal" -e "TEST_TYPE=${TEST_TYPE}" -t broadinstitute/gatk:${DOCKER_TAG} bash --init-file /gatk/gatkenv.rc /root/run_unit_tests.sh;
     TEST_EXIT_VALUE=$?;
@@ -173,7 +167,6 @@ script:
     $( exit ${TEST_EXIT_VALUE} );
   else
     ./gatk PrintReads -I src/test/resources/NA12878.chr17_69k_70k.dictFix.bam -O output.bam;
-    export GATK_LAUNCH_SCRIPT="$(pwd)/gatk";
     travis_wait 50 ./gradlew -Dscala.version=${SCALA_VERSION} jacocoTestReport;
   fi;
 # This creates and uploads the gatk zip file to the nightly build bucket, only keeping the 10 newest entries
