--- a/build.gradle
+++ b/build.gradle
@@ -69,7 +69,7 @@ final scalaVersion = System.getProperty('scala.version', '2.11')
 final hadoopVersion = System.getProperty('hadoop.version', '3.2.1')
 final disqVersion = System.getProperty('disq.version','0.3.6')
 final genomicsdbVersion = System.getProperty('genomicsdb.version','1.3.0')
-final bigQueryVersion = System.getProperty('bigQuery.version', '1.69.0')
+final bigQueryVersion = System.getProperty('bigQuery.version', '1.117.1')
 final guavaVersion = System.getProperty('guava.version', '27.1-jre')
 final testNGVersion = '7.0.0'
 
@@ -272,7 +272,7 @@ dependencies {
     }
 
     compile 'com.google.cloud:google-cloud-bigquery:' + bigQueryVersion
-    compile 'com.google.cloud:google-cloud-bigquerystorage:0.92.0-beta'
+    compile 'com.google.cloud:google-cloud-bigquerystorage:1.5.1'
 
     compile "gov.nist.math.jama:gov.nist.math.jama:1.1.1"
 
